Fixed padding on mobile. Added gold star.

--- a/src/index.css
+++ b/src/index.css
@@ -400,6 +400,7 @@ input::placeholder {
   margin: 10px;
   border: none;
   font-size: 24px;
+  border-radius: 12px;
 }
 
 .resultsTable {
@@ -571,12 +572,6 @@ input::placeholder {
   } */
 
   .headerContainer {
-    /* margin-bottom: 30px;
-    padding: 30px;
-    text-transform: uppercase;
-    font-family: Header;
-    text-align: center;
-    font-weight: 100; */
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto;
@@ -598,9 +593,6 @@ input::placeholder {
       "image"
       "phaseContents"
       "footer";
-    /* padding-bottom: 10rem;
-    margin: 0;
-    width: 100%; */
   }
 
   .imageContainer {
@@ -614,19 +606,29 @@ input::placeholder {
 
   .formContainer {
     display: flex;
-    /* flex-direction: column; */
     align-items: center;
     justify-content: center;
     width: 100%;
-    /* border: 1px solid green; */
     margin: 20px;
+  }
+
+  .submitBtn {
+    margin-top: 20px;
+  }
+
+  .resultsTable {
+    width: 90%;
+    padding: 15px;
   }
 
   .wordInput {
     width: 60%;
-    /* border: 1px solid red; */
     font-size: 20px;
     padding: 20px;
     border-radius: 20px;
+  }
+
+  .phaseContentsContainer {
+    padding: 20px;
   }
 }
